--- a/.build.yml
+++ b/.build.yml
@@ -1,4 +1,4 @@
-image: alpine/edge
+image: alpine/latest
 packages:
   - go
   - rsync
@@ -6,19 +6,15 @@ sources:
   - https://github.com/sauerbraten/extinfo-web
 environment:
   DEPLOY: p1x.pw
-  GOPATH: $HOME
+  GOFLAGS: '-mod=vendor'
 secrets:
-  - 41a695fb-4229-450d-9aa4-5499f6bcea81
+  - 41a695fb-4229-450d-9aa4-5499f6bcea81 # ssh key
 tasks:
-  - prepare_gopath: |
-      mkdir -p src/github.com/sauerbraten
-      mv extinfo-web src/github.com/sauerbraten/
   - build: |
-      cd src/github.com/sauerbraten/extinfo-web
-      go get
+      cd extinfo-web
       go build
   - deploy: |
-      cd src/github.com/sauerbraten/extinfo-web
+      cd extinfo-web
       rsync --rsh="ssh -o StrictHostKeyChecking=no" -rPq css html js extinfo-web ci@$DEPLOY:~/extinfo-web/
       ssh -o StrictHostKeyChecking=no ci@$DEPLOY 'killall extinfo-web || true'
       ssh -o StrictHostKeyChecking=no ci@$DEPLOY 'cd extinfo-web; nohup ./extinfo-web >> log.txt 2>&1 &'
